--- a/JavaScriptdemo1/FormValidation.html
+++ b/JavaScriptdemo1/FormValidation.html
@@ -100,6 +100,16 @@
                 return false;
             }
         }
+        // host();
+        // function host()
+        // {
+        //     console.log("host");
+        // }
+        // console.log(yt);
+        // var x
+
+
+
 
     </script>
 </body>
